--- a/hass-backup-s3/Dockerfile
+++ b/hass-backup-s3/Dockerfile
@@ -2,11 +2,10 @@ ARG BUILD_FROM
 FROM $BUILD_FROM
 
 ENV LANG C.UTF-8
-RUN apk add --no-cache duplicity py-boto3
 
+RUN apk add --no-cache duplicity py3-boto3
 
-# Copy data for add-on
 COPY run.sh /
-RUN chmod a+x /run.sh
+RUN chmod +x /run.sh
 
 CMD [ "/run.sh" ]
